# As_a_tester

./: .gitignore  README.md  index.html  process_literature.py
docs/01_Knowledge_Base/: README.md
docs/01_Knowledge_Base/Reports_and_Metrics_Archive/: README.md
docs/01_Knowledge_Base/Test_Case_Design_and_Repository/: README.md
docs/01_Knowledge_Base/Test_Strategy_and_Policies/: README.md
docs/01_Knowledge_Base/Testing_Methods_and_Theories/: README.md
docs/01_Test_Strategy_and_Policies/: README.md
docs/02_Methods/: README.md
docs/02_Methods/Skills_and_Heuristics/: README.md
docs/02_Methods/Tools_Environment_and_Automation/: README.md
docs/02_Testing_Methods_and_Theories/: README.md
docs/03_Personal_Insights/: README.md
docs/03_Personal_Insights/Case_Studies/: README.md
docs/03_Personal_Insights/Lessons_Learned/: README.md
docs/03_Test_Case_Design_and_Repository/: README.md
docs/04_Skills_and_Heuristics/: README.md
docs/04_Strategy_Generation/Guidelines/: README.md
docs/04_Strategy_Generation/Templates/: README.md
docs/05_Tools_Environment_and_Automation/: README.md  cli_testing_tips.md
docs/05_Tools_Environment_and_Automation/Automation_Frameworks/: README.md
docs/05_Tools_Environment_and_Automation/Base_on_test_flow/: its_runner.py  pyproject.toml  requirements.txt  spec.md  testFlow.md
docs/06_Reports_and_Metrics_Archive/: README.md
docs/07_Personal_Insights/Experience_Stories/: README.md
docs/08_Strategy_Generation/: README.md
docs/08_Strategy_Generation/Automation_Tools/: README.md
