[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "its-runner"
version = "0.1.0"
description = "Camera ITS 互動式測試小幫手"
requires-python = ">=3.9"
dependencies = [
    "questionary>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
its-runner = "its_runner:main"

[tool.setuptools.packages.find]
where = ["."]
